# sentiric-tts-edge-service

./: .env.example  .gitignore  Dockerfile  LOGIC.md  Makefile  README.md  TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/static/: script.js  style.css
app/templates/: index.html
