# sentiric-tts-edge-service/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiric-tts-edge-service"
version = "0.1.0"
description = "Expert TTS engine using Microsoft Edge TTS for the Sentiric Platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "structlog",
    "edge-tts",
    "anyio",
    "pydantic-settings",
    # --- YENİ SATIRLAR ---
    "jinja2",
    "python-multipart"
    # --- YENİ SATIRLAR SONU ---
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"