[tool.poetry]
name = "sentiric-tts-edge-service"
version = "0.1.0"
description = "Expert TTS engine using Microsoft Edge TTS for the Sentiric Platform."
authors = ["Azmi ŞAHİN <6445951+azmisahin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.4"
structlog = "^24.1.0"
edge-tts = "^6.1.10"
anyio = "^4.4.0"
pydantic-settings = "^2.3.4"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"